[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/kenney_topdowntanksredux/tank_blue.png" type="Texture" id=1]
[ext_resource path="res://entities/Player.gd" type="Script" id=2]
[ext_resource path="res://lib/proc/proc_pool.gd" type="Script" id=3]
[ext_resource path="res://entities/procs/DynamoEffect.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 21 )

[sub_resource type="CircleShape2D" id=2]
radius = 95.0842

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )
faction_id = 1
proc_pool_path = NodePath("CurrentProcPool")

[node name="TankBlue" type="Sprite" parent="."]
rotation = -3.14159
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="Projectiles" type="Node" parent="."]

[node name="CurrentProcPool" type="Node2D" parent="."]
visible = false
script = ExtResource( 3 )

[node name="DynamoEffect" parent="CurrentProcPool" instance=ExtResource( 4 )]

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="ItemScanner" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemScanner"]
shape = SubResource( 2 )

[connection signal="area_shape_entered" from="ItemScanner" to="." method="_on_ItemScanner_area_shape_changed"]
[connection signal="area_shape_exited" from="ItemScanner" to="." method="_on_ItemScanner_area_shape_changed"]
